<resources>
    <string name="app_name">TrakDesk</string>
    <string name="str_ok">OK</string>
    <string name="str_ticket_management">Ticket Management</string>
    <string name="str_efficiently_manage_your_tickets_and_the_go">Efficiently manage your tickets and the go</string>
    <string name="str_blank" />
    <string name="str_create">Create</string>
    <string name="str_language">Language</string>
    <string name="str_department">Department</string>
    <string name="str_company">Company</string>
    <string name="btn_apply">Apply</string>
    <string name="action_delete">Delete</string>
    <string name="action_restore">Restore</string>
    <string name="str_search_contacts">Search Contacts</string>
    <string name="str_add_contact">Add Contact</string>
    <string name="str_full_name">Full Name</string>
    <string name="str_title">Title</string>
    <string name="str_email">Email</string>
    <string name="str_address">Address</string>
    <string name="str_phone">Phone</string>
    <string name="str_mobile">Mobile</string>
    <string name="str_fax">Fax</string>
    <string name="btn_add">Add</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_header_title">PSK</string>
    <string name="nav_header_subtitle">pankajk@gmail.com</string>
    <string name="str_all_contacts">All Contacts</string>
    <string name="str_verified_contacts">Verified Contacts</string>
    <string name="str_unverified_contacts">Unverified Contacts</string>
    <string name="str_block_contacts">Block Contacts</string>
    <string name="str_blocked_contacts">Blocked Contacts</string>
    <string name="str_deleted_contacts">Deleted Contacts</string>
    <string name="str_views">Views</string>
    <string name="str_tickets">Tickets</string>
    <string name="str_contacts">Contacts</string>
    <string name="str_companies">Companies</string>
    <string name="str_delete">Delete</string>
    <string name="str_contact">Contact</string>
    <string name="str_deleted">\u0020deleted</string>
    <string name="str_restore">\u0020restore</string>
</resources>
