<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_tickets"
        android:icon="@drawable/ic_menu_black_24dp"
        android:title="@string/str_tickets"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_contacts"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/str_contacts"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_companies"
        android:icon="@drawable/ic_menu_black_24dp"
        android:title="@string/str_companies"
        app:showAsAction="always" />

    <item
        android:icon="@drawable/ic_more_vert_black_24dp"
        android:title="@string/str_blank"
        app:showAsAction="never" />

</menu>