<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_78sdp"
    android:background="@drawable/toolbar_background_gradient"
    android:orientation="horizontal"
    android:paddingStart="@dimen/_5sdp"
    android:paddingTop="@dimen/_25sdp"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:layout_width="@dimen/_20sdp"
        android:layout_height="@dimen/_20sdp"
        android:layout_gravity="center"
        android:contentDescription="@string/nav_header_desc"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/ic_nav_back" />

    <TextView
        android:id="@+id/tvUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/_15sdp"
        android:text="@string/str_views"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_16sdp" />

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nav_header_subtitle"
        android:textColor="@color/colorGrey"
        android:textSize="13sp"
        android:visibility="gone" />

</LinearLayout>
