<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/mainContainer"
        layout="@layout/content_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/_50sdp" />

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/clBottomAppBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_280sdp"
        android:layout_alignParentBottom="true">

        <!-- Bottom bar -->
        <com.google.android.material.bottomappbar.BottomAppBar
            android:id="@+id/bottomAppBar"
            style="@style/Widget.MaterialComponents.BottomAppBar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_gravity="bottom"
            app:backgroundTint="@color/colorPrimary"
            app:contentInsetEnd="0dp"
            app:contentInsetLeft="0dp"
            app:contentInsetRight="0dp"
            app:contentInsetStart="0dp"
            app:fabAlignmentMode="center"
            app:fabCradleMargin="6dp"
            app:fabCradleRoundedCornerRadius="50dp"
            app:fabCradleVerticalOffset="5dp">
            <!--style="@style/Widget.MaterialComponents.BottomAppBar"-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:baselineAligned="false"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/llParentTicket"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_gravity="center"
                        app:srcCompat="@drawable/ic_tickets" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/str_tickets"
                        android:textColor="@android:color/darker_gray"
                        android:textSize="13sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llParentContacts"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_gravity="center"
                        app:srcCompat="@drawable/ic_contacts" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/str_contacts"
                        android:textColor="@android:color/white"
                        android:textSize="13sp" />
                </LinearLayout>

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="2" />

                <LinearLayout
                    android:id="@+id/llParentCompanies"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:gravity="center"
                        app:srcCompat="@drawable/ic_companies" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/str_companies"
                        android:textColor="@android:color/darker_gray"
                        android:textSize="13sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llParentExtraMenus"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_marginTop="@dimen/_3sdp"
                        android:gravity="center_vertical"
                        app:srcCompat="@drawable/ic_more_vert_black_24dp" />
                </LinearLayout>
            </LinearLayout>

        </com.google.android.material.bottomappbar.BottomAppBar>

        <!-- Floating Action button -->
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tint="@color/colorHeading"
            app:backgroundTint="@color/colorWhite"
            app:borderWidth="2dp"
            app:elevation="2dp"
            app:fabCustomSize="@dimen/_56sdp"
            app:layout_anchor="@id/bottomAppBar"
            app:maxImageSize="@dimen/_30sdp"
            app:srcCompat="@drawable/ic_add_black_24dp" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</RelativeLayout>